[project]
name = "Helicity_Computation_Crystals"
version = "0.0.2"
description = "A script for the computation of handedness in crystalline structures."
authors = [
    {name = "F. Gómez-ortiz", email = "fgomez@uliege.be"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3"}
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0"
]
#scripts = []
	
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",

  "License :: OSI Approved :: BSD License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["Helicity_Computation_Crystals"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
helicity_computation = "Helicity_Computation_Crystals:main"

[tool.pdm]
distribution = true

[project.optional-dependencies]
test=[
    "pytest>=6.2.0",
]

dev=[
    "pytest>=6.2.0",
    "black>=21.6b0",
    "pre-commit>=2.13.0",
    "sphinx>=4.1.2",
]
